exercises/ex6-Security/1-relax_mTLS.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "relax-mtls"
  namespace: "web-tier"
spec:
  selector:
    matchLabels:
      app: web-tier
  mtls:
    mode: PERMISSIVE
## MODES --> STRICT, PERMISSIVE, DISABLE
