exercises/ex6-Security/3-authZ-jwt.yaml
# Test from test-tier pod $curl --header "Authorization: Bearer $token" web-tier-svc.web-tier.svc.cluster.local
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "jwt-authz"
  namespace: web-tier
spec:
  selector:
    matchLabels:
      app: web-tier
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["*"]
