exercises/ex6-Security/6-ip-authZ.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "ip-authz"
  namespace: app-tier
spec:
  selector:
    matchLabels:
      app: app-tier
  action: DENY
  rules:
  - from:
    - source:
        ipBlocks: ["172.100.235.182/32"]
        #namespaces: ["web-tier"]
        #principals: ["cluster.local/ns/web-tier/sa/defaut"]
    to:
    - operation:
        methods: ["GET"]
